[package]
name = "excellar-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "20.0.0-rc1", features = ["testutils"] }
soroban-cli = "20.0.0-rc1"
clap = { version = "4.1.8", features = [ "derive" ] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.31"
serde = "1.0.82"
serde_derive = "1.0.82"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
stellar-strkey = "0.0.7"
soroban-spec-tools = "0.8.7"
rand = "0.8.5"
sha2 = "0.10.7"
