[package]
name = "lendcraft-deployer-contract"
version = "0.1.0"
edition = "2023"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "0.8.7" }

[dev_dependencies]
soroban-sdk = { version = "0.8.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true